[package]
name = "ntapcsheel_dll_rs"
version = "1.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging"] }
ntapi = "0.4.1"
rc4 = "0.1.0"
rand = "0.8"
obfstr = "0.4"

[profile.release]
opt-level = "z"
strip = true  # Automatically strip symbols from the binary.
lto = true
trim-path = true
debug = 0
panic = "abort"